# True-Context

./: .clang-format  .contextignore.copy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  collect_context.sh  todo.md
cmake/: toolchain-aarch64-linux-gnu.cmake  toolchain-x86_64-linux-gnu.cmake
docs/: ARCHITECTURE.md
include/truecontext/: version.hpp
include/truecontext/app/: application.hpp  exit_code.hpp
include/truecontext/cli/: options.hpp  parser.hpp  usage.hpp
include/truecontext/collect/: collector.hpp  config.hpp
include/truecontext/ignore/: gitignore_match.hpp  matcher.hpp
include/truecontext/io/: file_writer.hpp  stdout_writer.hpp
include/truecontext/render/: renderer.hpp  tree_node.hpp  tree_renderer.hpp
include/truecontext/sort/: sorter.hpp
include/truecontext/util/: cstring.hpp  path.hpp
include/truecontext/walk/: path_list.hpp  walker.hpp
scripts/: smoke_build.sh  test_ignore.sh
src/: CMakeLists.txt  main.cpp
src/app/: application.cpp
src/cli/: parser.cpp  usage.cpp
src/collect/: collector.cpp
src/ignore/: gitignore_match.cpp  matcher.cpp
src/io/: file_writer.cpp  stdout_writer.cpp
src/render/: renderer.cpp  tree_renderer.cpp
src/sort/: sorter.cpp
src/util/: path.cpp
src/walk/: path_list.cpp  walker.cpp
templates/: .contextignore.cplusplus  .contextignore_android  .contextignore_csharp  .contextignore_golang  .contextignore_java  .contextignore_nextjs  .contextignore_python  .contextignore_rust  README.md
tests/fixtures/ignore_sample/: out.md
tests/fixtures/ignore_sample/tests/golden/: keep.txt
